--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<p cuiStyled m="20">Start editing to see some magic happen :)</p>
-
-<div cuiBox></div>
+<p cuiStyled margin="96">This some margin!</p>
